@@ -1,15 +1,27 @@
-/******************************************************
-*
-*     ©keithhedger Wed 11 Dec 10:41:48 GMT 2013
-*     kdhedger68713@gmail.com
-*
-*     encoding.cpp
-* 
-*	Thanks to the developers of leafpad for the code below.
-*	Tarot Osuji <tarot@sdf.lonestar.org>
-*	Original source can be found here:
-*	http://savannah.nongnu.org/download/leafpad/leafpad-0.8.17.tar.gz
-******************************************************/
+/*
+ *
+ * ©K. D. Hedger. Sun 25 Oct 14:51:00 GMT 2015 kdhedger68713@gmail.com
+
+ * This file (encoding.cpp) is part of KKEdit.
+
+ * KKEdit is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * at your option) any later version.
+
+ * KKEdit is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+ * You should have received a copy of the GNU General Public License
+ * along with KKEdit.  If not, see <http://www.gnu.org/licenses/>.
+
+ * Thanks to the developers of leafpad for the code below.
+ * Tarot Osuji <tarot@sdf.lonestar.org>
+ * Original source can be found here:
+ * http://savannah.nongnu.org/download/leafpad/leafpad-0.8.17.tar.gz
+*/
 
 #include "kkedit-includes.h"
 
