@@ -1,10 +1,22 @@
 /*
  *
- * K.D.Hedger 2013 <kdhedger68713@gmail.com>
- *
- * globals.h
- *
-*/
+ * ©K. D. Hedger. Sun 25 Oct 14:49:41 GMT 2015 kdhedger68713@gmail.com
+
+ * This file (globals.h) is part of KKEdit.
+
+ * KKEdit is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * at your option) any later version.
+
+ * KKEdit is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+ * You should have received a copy of the GNU General Public License
+ * along with KKEdit.  If not, see <http://www.gnu.org/licenses/>.
+ */
 
 #include "kkedit-includes.h"
 
