@@ -1,11 +1,22 @@
-/******************************************************
-*
-*     ©keithhedger Wed 23 Jul 15:34:30 BST 2014
-*     kdhedger68713@gmail.com
-*
-*     plugins.cpp
-* 
-******************************************************/
+/*
+ *
+ * ©K. D. Hedger. Sun 25 Oct 14:52:02 GMT 2015 kdhedger68713@gmail.com
+
+ * This file (plugins.cpp) is part of KKEdit.
+
+ * KKEdit is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * at your option) any later version.
+
+ * KKEdit is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+ * You should have received a copy of the GNU General Public License
+ * along with KKEdit.  If not, see <http://www.gnu.org/licenses/>.
+ */
 
 #include "kkedit-includes.h"
 
